BUGFIX z-index

--- a/src/components/MainMap/index.css
+++ b/src/components/MainMap/index.css
@@ -47,6 +47,7 @@
 
 
 .map{
+	z-index: 1;
 	width: 100%;
 	height: 100%;
 }
